test: ReservationTimeService 테스트 추가