@@ -1,23 +1,36 @@
 package roomescape.unit.repository;
 
+import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
+import java.util.Optional;
+import java.util.concurrent.atomic.AtomicLong;
 import roomescape.domain.ReservationTime;
 import roomescape.repository.ReservationTimeRepository;
 
 public class FakeReservationTimeRepository implements ReservationTimeRepository {
-    
+
+    AtomicLong index = new AtomicLong(1L);
+    List<ReservationTime> reservationTimes = new ArrayList<>();
+
     @Override
     public long add(ReservationTime reservationTime) {
-        return 0;
+        long id = index.getAndIncrement();
+        reservationTimes.add(new ReservationTime(id, reservationTime.getTime()));
+        return id;
     }
 
     @Override
     public List<ReservationTime> findAll() {
-        return List.of();
+        return Collections.unmodifiableList(reservationTimes);
     }
 
     @Override
     public void deleteById(Long id) {
-
+        Optional<ReservationTime> findReservationTimes = reservationTimes.stream()
+                .filter(reservation -> reservation.getId().equals(id))
+                .findAny();
+        findReservationTimes.orElseThrow(() -> new IllegalArgumentException("존재하지 않는 id입니다." + id));
+        reservationTimes.remove(findReservationTimes.get());
     }
 }
